--- a/css/ticketing.css
+++ b/css/ticketing.css
@@ -35,11 +35,21 @@ body{
         grid-area: content;
         display: flex;
         flex-direction: row;
-        
-        & img{
-            width: 7rem;
-            height: auto;
-            padding: 1rem 3rem;
+        & article{
+            
+            & p{
+                color: var(--color-bright-gray);
+            }
+            & button{
+                color: var(--color-bright-gray);
+                padding: 1 2rem;
+                border-radius: 100%;
+            }
+            & img{
+                width: auto;
+                height: 10rem;
+                padding: 1rem 3rem;
+            }
         }
     }
     & aside{
@@ -105,8 +115,6 @@ body{
                 color: var(--color-bright-gray);
                 padding: 0 0.25em;
                 border-radius: 100%;
-                
-                
             }
             & span{
                 background-color: var(--color-gray);
