--- a/css/create.css
+++ b/css/create.css
@@ -67,17 +67,17 @@ main{
     margin-bottom: 5rem;
     & section{
         & h1{
-            font-size: 2rem;
+            font-size: var(--font-size-1);
             margin-bottom: var(--size-none);
-            margin-top: 4rem;
+            margin-top: 8rem;
         }
         & p{
             margin-top: var(--size-none);
-            font-size: 1rem;
+            font-size: var(--font-size-2);
             color: var(--color-gray);
         }
         & img{
-            height: 2rem;
+            height: var(--image-size);
         }
         & ul{
             list-style: none;
@@ -90,13 +90,14 @@ main{
                 height: 2.2rem;
                 display: list-item;
                 & input{
-                    color: var(--color-white);
                     width: 99%;
                     float: right;
                     font-size: var(--font-size-small);
                     background-color: var(--black-color);
                     border: none;
-                    padding: 0.5rem;
+                    font-size: var(--font-size-3);
+                    font-weight: bold;
+                    font-style: italic;
                 }
                 & label{
                     font-size: var(--size-none);
@@ -117,10 +118,13 @@ main{
         & button{
             background-color: var(--color-black);
             color: var(--color-white);
-            border: var(--border-size) solid var(--color-gray);
+            border: var(--border-size) solid var(--color-white);
             margin-top: 2rem;
-            width: 10rem;
-            height: 2rem;
+            width: 20rem;
+            color:var(--color-red);
+            font-size: var(--font-size-3);
+            font-weight: bold;
+            height: 3rem;
         }
         & #accept_button{
             transform: scale(3);
@@ -221,19 +225,23 @@ section::-webkit-scrollbar {
         margin-bottom: 3rem;
         & section{
             & h1{
-                margin-top: 3rem;
+                margin-top: 6rem;
+            }
+            & p{
+                font-size: var(--font-size-big);
             }
             & img{
-                height: 1.5rem;
+                height: 2rem;
             }
             & ul{
                 list-style: none;
                 & li{
                     margin-top: 1.5rem;
                     margin-bottom: 1rem;
-                    height: 1.8rem;
+                    height: 2rem;
                     & input{
-                        padding: 0.3rem;
+                        
+                        font-size: var(--font-size-3);
                     }
                     & #lastname {
                         width: 94%;
@@ -248,7 +256,7 @@ section::-webkit-scrollbar {
                 }
             }
             & #accept_text{
-                font-size: 0.7rem;
+                font-size: 1rem;
                 margin-right: 10%;
             }
         }
