--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,12 @@
     --color-bright-gray: #7F7F7F;
     --color-black: #000;
     --color-red: #E60000;
-    --font-size-big: 2rem;
+    --font-size-2: 2rem;
+    --font-size-1: 4rem;
+    --font-size-3: 1.6rem;
     --size-none: 0px;
     --border-size: 0.0001rem;
+    --image-size: 2rem;
     
 
     --color-bg : var(--color-black);
