--- a/css/ticketing.css
+++ b/css/ticketing.css
@@ -32,23 +32,33 @@ body{
         grid-area: screen;
     }
     & #food_and_drinks{
+        width: 90%;
+        overflow: auto;
         grid-area: content;
         display: flex;
         flex-direction: row;
         & article{
-            
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
             & p{
                 color: var(--color-bright-gray);
+                padding: 0.5rem;
             }
+            
             & button{
-                color: var(--color-bright-gray);
-                padding: 1 2rem;
+                
+                color: var(--color-red);
+                padding: 0.25em 0.5em;
+                margin: 0.5rem;
                 border-radius: 100%;
+                border: 0.5px solid var(--color-red);
             }
             & img{
                 width: auto;
-                height: 10rem;
-                padding: 1rem 3rem;
+                height: 8.5rem;
+                padding: 1rem 2.5rem;
             }
         }
     }
@@ -204,4 +214,7 @@ body{
             }
         }
     }
+}
+#food_and_drinks::-webkit-scrollbar {
+    display: none; 
 }
