--- a/css/movie.css
+++ b/css/movie.css
@@ -316,7 +316,7 @@ main {
                 border: #ff0000;
                 border-style: solid;
                 border-radius: 33%;
-                padding: 10%;
+                padding: 8%;
                 display: inline-block;
 
 
@@ -394,6 +394,47 @@ main {
 
 
 
+            }
+
+            & .comment {
+                display: flex;
+                flex-direction: column;
+                
+
+                & .deer {
+                    display: flex;
+                    flex-direction: row;
+                }
+                & h3 {
+                    color: #fff;
+                    font-size: large;
+                    margin-bottom: 3%;
+                    margin-right: 3%;
+
+                }
+                & p {
+                    color: #fff;
+                    margin-right: 3%;
+                }
+                & label {
+                    color: #fff;
+                }
+                & textarea {
+                    color: #fff;
+                    padding: 3%;
+                }
+
+                & button {
+                    color: #fff;
+                    background-color: #ff0000;
+                    padding: 3%;
+                    cursor: pointer;
+                    padding: 15px 32px;
+                    border-radius: 10%;
+                    font-size: 16px;
+                    margin-left: 33rem;
+                    margin-top: 1rem;
+                }
             }
         }
     }
