--- a/css/movie.css
+++ b/css/movie.css
@@ -25,19 +25,27 @@ header{
             list-style-type: none;
             font-size: var(--font-size-big);
             padding-top: 3rem;
-            padding-left: 2rem;
+            padding-left: 7rem;
             & a{
                 text-decoration: none;
                 font-family: var(--font-header);
                 font-weight: bold;
                 color: var(--color-garchig-main);
-                padding-left: 7rem;
+                padding-left: 4rem;
                  
             }
+            & #login{
+                text-decoration: none;
+                font-family: var(--font-header);
+                font-weight: bold;
+                color: var(--color-red);
+                padding-left: 4rem;
+            }
+
         }
         & #logo{
             padding-left: 3rem;
-            height: 8rem;
+            height: 10rem;
         }
     }
     & #address_icon{
@@ -442,6 +450,62 @@ main {
         }
     }
 }
+
+footer{
+    display: flex;
+    padding-left: 5rem;
+    padding-top: 3rem;
+    & #address_info{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding-right: 5rem;
+        & li{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            color: var(--color-footer-text);
+            & a{
+                text-decoration: none;
+                text-align: center;
+                justify-content: center;
+                color: var(--color-red);
+            }
+            & img{
+                padding: 1rem;
+                height: 3rem;
+                width: auto;
+            }
+        }
+    }
+    & #map{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        & .location{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            margin: 1rem 1rem;
+            & p{
+                padding: 0.5rem;
+                font-family: var(--font-text-engiin);
+                font-size: var(--font-size-big);
+                color: var(--color-footer-text);
+            }
+        }
+        
+        & img{
+            height: 7rem;
+            width: auto;
+        }
+    }
+}
+
+
+
 
 
         
