--- a/css/movie.css
+++ b/css/movie.css
@@ -261,19 +261,6 @@ main {
                 }
             }
         }
-        & .container::-webkit-scrollbar {
-            width: 1em;
-            display: none;
-        }
-
-        & .container::-webkit-scrollbar-track {
-            box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-        }
-           
-        & .container::-webkit-scrollbar-thumb {
-            background-color: darkgrey;
-            outline: 1px solid slategrey;
-        }
         & .container {
             width: 60rem;
             display: flex;
@@ -283,9 +270,19 @@ main {
             border-radius: 1rem;
             margin-left: 2rem;
             margin-right: 2rem;
-            overflow: scroll;
-            scrollbar-color: var(--color-red) orange;
-            scrollbar-width: thin;
+            & .reviews{
+                height: 75rem;
+                overflow-y: auto;
+                scrollbar-width: 0.5rem;
+                scrollbar-color: var(--color-red);
+                &::-webkit-scrollbar-thumb {
+                    background-color: var(--color-red);
+                    border-radius: 5px;
+                }
+                &::-webkit-scrollbar-track {
+                    background-color: var(--color-bg);
+                  }
+            }
             & article{
                 margin: 1.5rem;
                 border: var(--color-red);
