--- a/css/ticketing.css
+++ b/css/ticketing.css
@@ -22,7 +22,7 @@ body{
         }
         & h1{
             align-self: center;
-            padding-left: 10rem;
+            padding-left: 18.5rem;
         }
         & #info_ticketing{
             display: flex;
@@ -47,44 +47,39 @@ body{
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
-    
-
+        grid-area: screen;
         .screen {
             background-color: aliceblue;
-            height: 35px;
+            height: 1rem;
             width: 50%;
-            margin: 15px 0;
+            margin: 0.8rem 0;
             transform: rotateX(-45deg);
             box-shadow: 0px 3px 10px rgba(255, 255, 255, 0.75);
         }
-    
         .row {
             display: flex;
-    
             .seat {
                 background-color: antiquewhite;
-                height: 12px;
-                width: 15px;
-                margin: 3px;
-                border-top-left-radius: 10px;
-                border-top-right-radius: 10px;
+                height: 3rem;
+                width: 3.2rem;
+                margin: 0.2rem;
+                border-top-left-radius: 0.8rem;
+                border-top-right-radius: 0.8rem;
             }
     
             .seat.selected {
-                background-color: red;
+                background-color: var(--color-red);
             }
     
             .seat.occupied {
-                background-color: grey;
+                background-color: var(--color-bright-gray);
+            }
+            .seat:nth-of-type(5) {
+                margin-left: 1.2rem;
             }
     
-            .seat:nth-of-type(3) {
-                margin-left: 18px;
-            }
-    
-            .seat:nth-last-of-type(2) {
-                margin-left: 18px;
+            .seat:nth-last-of-type(4) {
+                margin-left: 1.2rem;
             }
     
             .seat:not(.occupied):hover {
@@ -98,9 +93,6 @@ body{
             }
         }
     }
-    
-
-    
     & #food_and_drinks{
         width: 90%;
         overflow: auto;
