--- a/css/create.css
+++ b/css/create.css
@@ -10,7 +10,7 @@
 }
 header{
     width: var(--percent-hundred);
-    height: 25vh;
+    height: 15vh;
     background-color: var(--color-bg);
     color: var(--color-garchig-main);
     & nav:nth-of-type(2){
@@ -21,15 +21,14 @@ header{
             flex-direction: row;
             list-style-type: none;
             font-size: var(--font-size-big);
-            padding-top: 3rem;
+            margin-top: 4rem;
             padding-left: 7rem;
             & a{
                 text-decoration: none;
                 font-family: var(--font-header);
                 font-weight: bold;
                 color: var(--color-garchig-main);
-                padding-left: 4rem;
-                 
+                text-align: center;
             }
             & #login{
                 text-decoration: none;
@@ -37,6 +36,10 @@ header{
                 font-weight: bold;
                 color: var(--color-red);
                 padding-left: 4rem;
+            }
+            & li{
+                margin-right: 10%;
+                display: grid;
             }
 
         }
@@ -50,8 +53,9 @@ header{
         flex-direction: row;
         justify-content: right;
         padding-top: 2rem;
-        padding-right: 5rem;
+        padding-right: 5%;
         list-style-type: none;
+        float: right;
         & a{
             padding-right: 0.5rem;
             & img{
@@ -60,7 +64,6 @@ header{
         }
     }
 }
-
 main{
     margin-left: 9rem;
     margin-right: 9rem;
@@ -160,13 +163,14 @@ footer{
             & img{
                 padding: 1rem;
                 height: 3rem;
-                width: auto;
+                width: 15%;
             }
         }
     }
     & #map{
         display: flex;
         flex-direction: row;
+        flex-flow: row wrap;
         justify-content: space-between;
         & .location{
             display: flex;
@@ -181,7 +185,6 @@ footer{
                 color: var(--color-footer-text);
             }
         }
-        
         & img{
             height: 7rem;
             width: auto;
@@ -206,17 +209,56 @@ footer{
 section::-webkit-scrollbar {
     display: none; 
 }
+@media(max-width: 68rem){
+    header{
+        height: 14vh;
+        & nav:nth-of-type(2){
+            & #menu{
+                font-size: var(--font-size-small);
+                padding-left: 3rem;
+            }
+        }
+    }
+    footer{
+        & #address_info{
+            width: 40%;
+            padding-right: 0rem;
+            & li{
+                & img{
+                    height: 2.2rem;
+                }
+            }
+        }
+        & #map{
+            & div{
+                width: 100%;
+            }
+        }
+    }
+}
 @media(max-width: 48rem){
     header{
         height: 28vh;
         max-width: 48rem;
         & nav:nth-of-type(2){
-            justify-content: space-evenly;
             & #menu{
+                margin-top: 2rem;
+                margin-left: 40%;
                 flex-direction: column;
-                padding: 1.5rem;
+                padding: 1rem;
                 font-size: var(--font-size-small);
+                & a{
+                    text-align: left;
+                    width: 10rem;
+                }
+                & #login{
+                    padding-left: 0rem;
+                }
             }
+        }
+        & #address_icon{
+            padding-top: 1rem;
+            padding-right: 1%;
         }
     }
     main{
@@ -266,7 +308,6 @@ section::-webkit-scrollbar {
         width: auto;
         justify-content: space-between;
         & #address_info{
-            padding-left: 4rem;
             font-size: var(--font-size-small);
             & li{
                 & img{
@@ -294,7 +335,17 @@ section::-webkit-scrollbar {
     }
     
 }
-
+@media(max-width: 35rem){
+    header{
+        height: 28vh;
+        max-width: 48rem;
+        & nav:nth-of-type(2){
+            & #menu{
+                margin-left: 20%;
+            }
+        }
+    } 
+}
 @media(max-width: 25rem){
     header{
         height: 20vh;
@@ -302,6 +353,7 @@ section::-webkit-scrollbar {
         & nav:nth-of-type(2){
             justify-content: center;
             & #menu{
+                margin-left: 30%;
                 flex-direction: column;
                 padding: 0.5rem;
                 font-size: 0.65rem;
@@ -392,15 +444,12 @@ section::-webkit-scrollbar {
         }
         & #map{
             flex-direction: column;
-            padding-right: 4rem;
+            padding-right: 0rem;
             & .location{
                 & p{
                     font-size: 0.7rem;
                    
                 }
-            }
-            & img{
-                height: 3rem;
             }
         }
     }
