--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-
 *{
     margin: 0;
     padding: 0;
@@ -7,7 +6,7 @@
 }
 header{
     width: var(--percent-hundred);
-    height: 25vh;
+    height: 15vh;
     background-color: var(--color-bg);
     color: var(--color-garchig-main);
     & nav:nth-of-type(2){
@@ -18,15 +17,14 @@ header{
             flex-direction: row;
             list-style-type: none;
             font-size: var(--font-size-big);
-            padding-top: 3rem;
+            margin-top: 4rem;
             padding-left: 7rem;
             & a{
                 text-decoration: none;
                 font-family: var(--font-header);
                 font-weight: bold;
                 color: var(--color-garchig-main);
-                padding-left: 4rem;
-                 
+                text-align: center;
             }
             & #login{
                 text-decoration: none;
@@ -34,6 +32,10 @@ header{
                 font-weight: bold;
                 color: var(--color-red);
                 padding-left: 4rem;
+            }
+            & li{
+                margin-right: 10%;
+                display: grid;
             }
 
         }
@@ -47,8 +49,9 @@ header{
         flex-direction: row;
         justify-content: right;
         padding-top: 2rem;
-        padding-right: 5rem;
+        padding-right: 5%;
         list-style-type: none;
+        float: right;
         & a{
             padding-right: 0.5rem;
             & img{
@@ -62,7 +65,7 @@ main{
         display: grid;
         & #bigposter-container{
             place-self: center;
-            width: 76rem;
+            width: 70%;
             height: 38rem;
             padding-right: 10rem;
             position: relative;
@@ -183,13 +186,14 @@ footer{
             & img{
                 padding: 1rem;
                 height: 3rem;
-                width: auto;
+                width: 15%;
             }
         }
     }
     & #map{
         display: flex;
         flex-direction: row;
+        flex-flow: row wrap;
         justify-content: space-between;
         & .location{
             display: flex;
@@ -204,7 +208,6 @@ footer{
                 color: var(--color-footer-text);
             }
         }
-        
         & img{
             height: 7rem;
             width: auto;
@@ -229,74 +232,56 @@ footer{
 section::-webkit-scrollbar {
     display: none; 
 }
+@media(max-width: 68rem){
+    header{
+        height: 14vh;
+        & nav:nth-of-type(2){
+            & #menu{
+                font-size: var(--font-size-small);
+                padding-left: 3rem;
+            }
+        }
+    }
+    footer{
+        & #address_info{
+            width: 40%;
+            padding-right: 0rem;
+            & li{
+                & img{
+                    height: 2.2rem;
+                }
+            }
+        }
+        & #map{
+            & div{
+                width: 100%;
+            }
+        }
+    }
+}
 @media(max-width: 48rem){
     header{
         height: 28vh;
         max-width: 48rem;
         & nav:nth-of-type(2){
-            justify-content: space-evenly;
             & #menu{
+                margin-top: 2rem;
+                margin-left: 40%;
                 flex-direction: column;
-                padding: 1.5rem;
+                padding: 1rem;
                 font-size: var(--font-size-small);
-            }
-        }
-    }
-    main{
-        & .container_poster{
-            width: auto;
-            padding: 1rem;
-            & #bigposter-container{
-                width: 80%;
-                position: relative;
-                & #bigposter1,
-                & #bigposter2,
-                & #bigposter3{
-                    position: absolute;
-                    top: 0%;
-                    left: 0%;
-                    height: auto;
-                    width: var(--percent-hundred);
-                }
-            }
-            & .button{
-                place-self: center;
-                position: absolute;
-                top: 90%;
-                & button{
-                    padding: 0.5rem 1rem;
-                    font-size: var(--font-size-reting);
-                    
-                }
-            }
-            & #buy_button{
-                place-self: center;
-                position: absolute;
-                top: 90%;
-                & button{
-                    padding: 0.5rem 1rem;
-                    font-size: var(--font-size-reting);
-                    
-                }
-            }
-        }
-        & section{
-            padding: rem;
-            width: auto;
-            & h2{
-                padding: 2rem 0rem 2rem 1.5rem;
-            }
-            & ul{
                 & a{
-                    padding: 1rem;
-                    font-size: var(--font-size-big);
-                    & img{
-                        height: 21.5rem;
-                        width: auto;
-                    }
-    
+                    text-align: left;
+                    width: 10rem;
+                }
+                & #login{
+                    padding-left: 0rem;
                 }
             }
+        }
+        & #address_icon{
+            padding-top: 1rem;
+            padding-right: 1%;
         }
     }
     footer{
@@ -304,7 +289,6 @@ section::-webkit-scrollbar {
         width: auto;
         justify-content: space-between;
         & #address_info{
-            padding-left: 4rem;
             font-size: var(--font-size-small);
             & li{
                 & img{
@@ -332,7 +316,17 @@ section::-webkit-scrollbar {
     }
     
 }
-
+@media(max-width: 35rem){
+    header{
+        height: 28vh;
+        max-width: 48rem;
+        & nav:nth-of-type(2){
+            & #menu{
+                margin-left: 20%;
+            }
+        }
+    } 
+}
 @media(max-width: 25rem){
     header{
         height: 20vh;
@@ -340,6 +334,7 @@ section::-webkit-scrollbar {
         & nav:nth-of-type(2){
             justify-content: center;
             & #menu{
+                margin-left: 30%;
                 flex-direction: column;
                 padding: 0.5rem;
                 font-size: 0.65rem;
@@ -360,53 +355,6 @@ section::-webkit-scrollbar {
             }
         }
     }
-    main{
-        & .container_poster{
-            & .button{
-                place-self: center;
-                position: absolute; 
-                top: 63%;
-                & button{
-                    padding: 0.2rem 0.5rem;
-                    font-size: 0.5rem;
-                    & img{
-                        height: 0.6rem;
-                        width: auto;
-                    }
-                }
-                & #buy_button{
-                    top: 0;
-                    font-size: 0.5rem;
-                    padding: 0.25rem 1rem;  
-                    display: inline-flex;
-                    align-items: center;
-                    & img{
-                        height: 0.5rem;
-                        width: auto;
-                        margin-left: 0.2rem;    
-                    }
-                }
-            }
-        }
-        & section{
-            padding: 0;
-            width: auto;
-            & h2{
-                padding: 1rem 0rem 2rem 0.5rem;
-                font-size: var(--font-size-small);
-            }
-            & ul{
-                & a{
-                    padding: 1rem;
-                    font-size: var(--font-size-reting);
-                    & img{
-                        height: 10rem;
-                        width: auto;
-                    }
-                }
-            }
-        }
-    }
     footer{
         padding: 0;
         justify-content: space-evenly;
@@ -423,24 +371,14 @@ section::-webkit-scrollbar {
         }
         & #map{
             flex-direction: column;
-            padding-right: 4rem;
+            padding-right: 0rem;
             & .location{
                 & p{
                     font-size: 0.7rem;
                    
                 }
             }
-            & img{
-                height: 3rem;
-            }
         }
     }
     
 }
-
-
-
-  
-
-
-
