--- a/css/movie.css
+++ b/css/movie.css
@@ -11,7 +11,7 @@
 }
 header{
     width: var(--percent-hundred);
-    height: 25vh;
+    height: 15vh;
     background-color: var(--color-bg);
     color: var(--color-garchig-main);
     & nav:nth-of-type(2){
@@ -22,15 +22,14 @@ header{
             flex-direction: row;
             list-style-type: none;
             font-size: var(--font-size-big);
-            padding-top: 3rem;
+            margin-top: 4rem;
             padding-left: 7rem;
             & a{
                 text-decoration: none;
                 font-family: var(--font-header);
                 font-weight: bold;
                 color: var(--color-garchig-main);
-                padding-left: 4rem;
-                 
+                text-align: center;
             }
             & #login{
                 text-decoration: none;
@@ -38,6 +37,10 @@ header{
                 font-weight: bold;
                 color: var(--color-red);
                 padding-left: 4rem;
+            }
+            & li{
+                margin-right: 10%;
+                display: grid;
             }
 
         }
@@ -51,8 +54,9 @@ header{
         flex-direction: row;
         justify-content: right;
         padding-top: 2rem;
-        padding-right: 5rem;
+        padding-right: 5%;
         list-style-type: none;
+        float: right;
         & a{
             padding-right: 0.5rem;
             & img{
@@ -390,11 +394,9 @@ main {
         }
     }
 }
-
 footer{
     display: flex;
     padding-left: 5rem;
-    padding-top: 3rem;
     & #address_info{
         display: flex;
         flex-direction: row;
@@ -415,13 +417,14 @@ footer{
             & img{
                 padding: 1rem;
                 height: 3rem;
-                width: auto;
+                width: 15%;
             }
         }
     }
     & #map{
         display: flex;
         flex-direction: row;
+        flex-flow: row wrap;
         justify-content: space-between;
         & .location{
             display: flex;
@@ -436,19 +439,159 @@ footer{
                 color: var(--color-footer-text);
             }
         }
-        
         & img{
             height: 7rem;
             width: auto;
         }
     }
 }
-
-
-
-
-
-
-
-
-
+@media(max-width: 68rem){
+    header{
+        height: 14vh;
+        & nav:nth-of-type(2){
+            & #menu{
+                font-size: var(--font-size-small);
+                padding-left: 3rem;
+            }
+        }
+    }
+    footer{
+        & #address_info{
+            width: 40%;
+            padding-right: 0rem;
+            & li{
+                & img{
+                    height: 2.2rem;
+                }
+            }
+        }
+        & #map{
+            & div{
+                width: 100%;
+            }
+        }
+    }
+}
+@media(max-width: 48rem){
+    header{
+        height: 28vh;
+        max-width: 48rem;
+        & nav:nth-of-type(2){
+            & #menu{
+                margin-top: 2rem;
+                margin-left: 40%;
+                flex-direction: column;
+                padding: 1rem;
+                font-size: var(--font-size-small);
+                & a{
+                    text-align: left;
+                    width: 10rem;
+                }
+                & #login{
+                    padding-left: 0rem;
+                }
+            }
+        }
+        & #address_icon{
+            padding-top: 1rem;
+            padding-right: 1%;
+        }
+    }
+    footer{
+        padding-left: 2rem;
+        width: auto;
+        justify-content: space-between;
+        & #address_info{
+            font-size: var(--font-size-small);
+            & li{
+                & img{
+                    padding: 0.5rem;
+                    height: 1.5rem;
+                    width: auto;
+                }
+            }
+        }
+        & #map{
+            flex-direction: column;
+            padding-right: 4rem;
+            & .location{
+                margin: 0.2rem;
+                & p{
+                    padding: 0.2rem;
+                    font-size: var(--font-size-small);
+                   
+                }
+            }
+            & img{
+                height: 3.5rem;
+            }
+        }
+    }
+    
+}
+@media(max-width: 35rem){
+    header{
+        height: 28vh;
+        max-width: 48rem;
+        & nav:nth-of-type(2){
+            & #menu{
+                margin-left: 20%;
+            }
+        }
+    } 
+}
+@media(max-width: 25rem){
+    header{
+        height: 20vh;
+        max-width: 25rem;
+        & nav:nth-of-type(2){
+            justify-content: center;
+            & #menu{
+                margin-left: 30%;
+                flex-direction: column;
+                padding: 0.5rem;
+                font-size: 0.65rem;
+            }
+            & #logo{
+                height: 5rem;
+                width: auto;
+            }
+        }
+        & #address_icon{
+            padding-top: 0.5rem;
+            padding-right: 1.5rem;
+            & a{
+                padding-right: 0.2rem;
+                & img{
+                    height: 0.5rem;
+                }
+            }
+        }
+    }
+    footer{
+        padding: 0;
+        justify-content: space-evenly;
+        & #address_info{
+            padding-left: 4rem;
+            font-size: 0.7rem;
+            & li{
+                & img{
+                    padding: 0.5rem;
+                    height: 1rem;
+                    width: auto;
+                }
+            }
+        }
+        & #map{
+            flex-direction: column;
+            padding-right: 0rem;
+            & .location{
+                & p{
+                    font-size: 0.7rem;
+                   
+                }
+            }
+        }
+    }
+    
+}
