--- a/css/create.css
+++ b/css/create.css
@@ -238,7 +238,7 @@ section::-webkit-scrollbar {
 }
 @media(max-width: 48rem){
     header{
-        height: 28vh;
+        height: 10vh;
         max-width: 48rem;
         & nav:nth-of-type(2){
             & #menu{
@@ -259,48 +259,6 @@ section::-webkit-scrollbar {
         & #address_icon{
             padding-top: 1rem;
             padding-right: 1%;
-        }
-    }
-    main{
-        margin-left: 5rem;
-        margin-right: 5rem;
-        margin-bottom: 3rem;
-        & section{
-            & h1{
-                margin-top: 6rem;
-            }
-            & p{
-                font-size: var(--font-size-big);
-            }
-            & img{
-                height: 2rem;
-            }
-            & ul{
-                list-style: none;
-                & li{
-                    margin-top: 1.5rem;
-                    margin-bottom: 1rem;
-                    height: 2rem;
-                    & input{
-                        
-                        font-size: var(--font-size-3);
-                    }
-                    & #lastname {
-                        width: 94%;
-                    }
-                    & #firstname {
-                        width: 94%;
-                    }
-                    & #dateandtime{
-                        float: left;
-                        width: 93%;
-                    }
-                }
-            }
-            & #accept_text{
-                font-size: 1rem;
-                margin-right: 10%;
-            }
         }
     }
     footer{
@@ -335,16 +293,138 @@ section::-webkit-scrollbar {
     }
     
 }
-@media(max-width: 35rem){
-    header{
-        height: 28vh;
-        max-width: 48rem;
-        & nav:nth-of-type(2){
-            & #menu{
-                margin-left: 20%;
+@media(max-width: 1352px){
+    main{
+        margin-left: 4.5rem;
+        margin-right: 4.5rem;
+        margin-bottom: 3rem;
+        & section{
+            & #accept_text{
+                margin-right: 30%;
             }
         }
-    } 
+    }
+}
+@media(max-width: 1080px){
+    main{
+        margin-left: 4rem;
+        margin-right: 4rem;
+        margin-bottom: 3rem;
+        & section{
+            & h1{
+                margin-top: 4rem;
+            }
+            & #accept_text{
+                font-size: 1rem;
+                margin-right: 30%;
+            }
+        }
+    }
+}
+@media(max-width: 890px){
+    main{
+        margin-left: 3rem;
+        margin-right: 3rem;
+        margin-bottom: 2rem;
+        & section{
+            & h1{
+                font-size: var(--font-size-2);
+                margin-top: 3rem;
+            }
+            & img{
+                height: var(--font-size-4);
+            }
+            & p{
+                font-size: var(--font-size-4);
+            }
+            & ul{
+                & li{
+                    margin-top: 1.5rem;
+                    margin-bottom: 1rem;
+                    height: 1.5rem;
+                    & input{
+                        font-size: var(--font-size-4);
+                    }
+                    & #lastname {
+                        width: 94%;
+                    }
+                    & #firstname {
+                        width: 94%;
+                    }
+                    & #dateandtime{
+                        float: left;
+                        width: 95%;
+                    }
+                }
+            }
+            & button{
+                margin-top: 2rem;
+                width: 15rem;
+                font-size: var(--font-size-4);
+                height: 2.5rem;
+            }
+            & #accept_text{
+                font-size: var(--font-size-5);
+                width: 70%;
+                margin-left: 2rem;
+                margin-right: 10%;
+            }
+        }
+}
+@media screen and (min-width:0px) and (max-width: 650){
+    main{
+        margin-left: 3rem;
+        margin-right: 3rem;
+        margin-bottom: 2rem;
+        & section{
+            & h1{
+                font-size: var(--font-size-2);
+                margin-top: 3rem;
+            }
+            & img{
+                height: var(--font-size-4);
+            }
+            & p{
+                font-size: var(--font-size-5);
+            }
+            & ul{
+                & li{
+                    margin-top: 1.5rem;
+                    margin-bottom: 1rem;
+                    height: 1.5rem;
+                    & input{
+                        font-size: var(--font-size-5);
+                    }
+                    & #lastname {
+                        width: 94%;
+                    }
+                    & #firstname {
+                        width: 94%;
+                    }
+                    & #dateandtime{
+                        float: left;
+                        width: 95%;
+                    }
+                }
+            }
+            & button{
+                margin-top: 2rem;
+                width: 100%;
+                font-size: var(--font-size-4);
+                height: 2.5rem;
+            }
+            & #accept_button{
+                transform: scale(2);
+                margin-left: 0.5rem;
+                margin-top: 1rem;
+            }
+            & #accept_text{
+                font-size: var(--font-size-5);
+                width: 70%;
+                margin-left: 2rem;
+            }
+        }
+}
 }
 @media(max-width: 25rem){
     header{
@@ -374,60 +454,6 @@ section::-webkit-scrollbar {
             }
         }
     }
-    main{
-        margin-left: 2rem;
-        margin-right: 2rem;
-        margin-bottom: 0rem;
-        & section{
-            & h1{
-                font-size: 1.5rem;
-                margin-top: 1.5rem;
-            }
-            & p{
-                font-size: 0.6rem;
-            }
-            & img{
-                height: 1rem;
-                width: 1rem;
-            }
-            & ul{
-                & li{
-                    margin-top: 1rem;
-                    margin-bottom: 0.5rem;
-                    height: 1rem;
-                    & input{
-                        font-size: 0.5rem;
-                        padding: 0.2rem;
-                    }
-                    & #lastname {
-                        width: 92%;
-                    }
-                    & #firstname {
-                        width: 92%;
-                    }
-                    & #dateandtime{
-                        width: 92%;
-                    }
-                }
-            }
-            & button{
-                font-size: 0.7rem;
-                margin-top: 2rem;
-                width: 8rem;
-                height: 1.5rem;
-            }
-            & #accept_button{
-                transform: scale(2);
-                margin-left: 0.5rem;
-                margin-top: 1rem;
-            }
-            & #accept_text{
-                font-size: 0.5rem;
-                margin-left: 1rem;
-                margin-right: 10%;
-            }
-        }
-    }
     footer{
         padding: 0;
         justify-content: space-evenly;
@@ -452,6 +478,6 @@ section::-webkit-scrollbar {
                 }
             }
         }
+    }  
     }
-    
 }
