--- a/css/login.css
+++ b/css/login.css
@@ -222,7 +222,68 @@ section::-webkit-scrollbar {
         }
     }
 }
-@media(max-width: 48rem){
+@media(max-width: 1400px){
+    main{
+        margin-top: 7rem;
+        & ::placeholder{
+            font-size: var(--font-size-5);
+        }
+        & div{
+            font-size: var(--font-size-3);
+        }
+        & article{
+            & ul{
+                & li{
+                    & input{
+                        width: 90%;
+                    }
+                }
+            }
+            & h6{
+                text-align: center;
+                font-size: var(--font-size-movie);
+                margin: 2rem;
+                margin-bottom: 6rem;
+            }
+            & p{
+                text-align: center;
+                width: 80%;
+                font-size: 10px;
+                margin-left: 10%;
+            }
+        }
+    }
+    footer{
+        width: 85%;
+    }
+}
+@media(max-width: 1000px){
+    main{
+        margin-top: 6rem;
+        & ::placeholder{
+            font-size: 0.5rem;
+        }
+        & div{
+            font-size: var(--font-size-3);
+        }
+        & article{
+            & ul{
+                & li{
+                    & input{
+                        width: 90%;
+                    }
+                }
+            }
+            & h6{
+                font-size: var(--font-size-3);
+            }
+        }
+    }
+    footer{
+        width: 85%;
+    }
+}
+@media(max-width: 900px){
     header{
         height: 28vh;
         max-width: 48rem;
@@ -256,7 +317,7 @@ section::-webkit-scrollbar {
         height: 22rem;
         color: var(--color-white);
         & ::placeholder{
-            font-size: 0.9rem;
+            font-size: 0.7rem;
         }
         & div{
             margin: 2rem;
@@ -287,11 +348,10 @@ section::-webkit-scrollbar {
             & h6{
                 font-size: var(--font-size-movie);
                 margin: 1rem;
-                margin-left: 3rem;
+                text-align: center;
                 margin-bottom: 4rem;
             }
-            & p{
-                margin-left: 3rem;
+            & p{text-align: center;
                 font-size: 0.7rem;
             }
         }
@@ -330,7 +390,7 @@ section::-webkit-scrollbar {
 }
 @media(max-width: 35rem){
     header{
-        height: 28vh;
+        height: 10vh;
         max-width: 48rem;
         & nav:nth-of-type(2){
             & #menu{
@@ -339,7 +399,7 @@ section::-webkit-scrollbar {
         }
     } 
 }
-@media(max-width: 25rem){
+@media(max-width: 500px){
     header{
         height: 20vh;
         max-width: 25rem;
@@ -405,12 +465,11 @@ section::-webkit-scrollbar {
                 }
             }
             & h6{
-                margin: 1rem;
-                margin-left: 7rem;
+                margin: 1rem;text-align: center;
                 margin-bottom: 4rem;
             }
             & p{
-                margin-left: 7rem;
+                text-align: center;
             }
         }
     }
@@ -440,4 +499,11 @@ section::-webkit-scrollbar {
         }
     }
     
+}
+@media(max-width: 350px){
+    main{
+        & div{
+            font-size: var(--font-size-5);
+        }
+    }
 }
