--- a/css/nowplaying.css
+++ b/css/nowplaying.css
@@ -4,7 +4,7 @@
     font-family: var(--font-text-engiin);
     background-color: var(--color-bg);
 }
-header{
+header{margin-bottom: 4rem;
     width: var(--percent-hundred);
     height: 15vh;
     background-color: var(--color-bg);
@@ -79,14 +79,14 @@ main{
                 color: var(--color-text-engiin);
                 & img{
                     place-self: center;
-                    height: 25rem;
+                    height: 23rem;
                     width: auto;
                 }
             }
             & .rating{
                 position: absolute;
                 top: 0;
-                left: 15.5vw;
+                left: 50%;
                 width: 30%;
                 height: 7%;
                 display: flex;
@@ -196,7 +196,7 @@ footer{
 }
 @media(max-width: 48rem){
     header{
-        height: 28vh;
+        height: 10vh;
         max-width: 48rem;
         & nav:nth-of-type(2){
             & #menu{
@@ -278,7 +278,7 @@ footer{
 }
 @media(max-width: 35rem){
     header{
-        height: 28vh;
+        height: 10vh;
         max-width: 48rem;
         & nav:nth-of-type(2){
             & #menu{
@@ -289,7 +289,7 @@ footer{
 }
 @media(max-width: 25rem){
     header{
-        height: 20vh;
+        height: 5vh;
         max-width: 25rem;
         & nav:nth-of-type(2){
             justify-content: center;
@@ -368,4 +368,203 @@ footer{
         }
     }
     
+}
+@media(max-width: 87.5rem){
+    main{
+        padding-left: 5rem;
+        padding-right: 5rem;
+        & section{
+            & article{
+                & .movie_poster{
+                    padding-bottom: 6rem;
+                    & img{
+                        height: 17rem;
+                    }
+                }
+                & .rating{
+                    left: 50%;
+                    width: 30%;
+                }
+                
+            }
+        }
+    }
+}
+@media(max-width: 68.75rem){
+    main{
+        padding-left: 4rem;
+        padding-right: 4rem;
+        & section{
+            & article{
+                & .movie_poster{
+                    padding-bottom: 5rem;
+                    & img{
+                        height: 16rem;
+                    }
+                }
+                & .rating{
+                    left: 50%;
+                    width: 30%;
+                    padding: 0.6rem;
+                }
+                
+            }
+        }
+    }
+}
+@media(max-width: 56.25rem){
+    main{
+        padding-left: 3rem;
+        padding-right: 3rem;
+        & section{
+            & article{
+                & .movie_poster{
+                    padding-bottom: 4rem;
+                    & img{
+                        height: 14rem;
+                    }
+                }
+                & .rating{
+                    left: 50%;
+                    width: 30%;
+                    height: 5%;
+                }
+                
+            }
+        }
+    }
+}
+@media(max-width: 50rem){
+    main{
+        padding-left: 2rem;
+        padding-right: 2rem;
+        & section{
+            display: grid;
+            grid-template-rows: repeat(3, 1fr);
+            grid-template-columns: repeat(3, 1fr);
+            & article{
+                position: relative;
+                & .movie_poster{
+                    display: grid;
+                    text-decoration: none;
+                    text-align: center;
+                    padding-bottom: 4rem;
+                    font-family: var(--font-londrina);
+                    font-size: var(--font-size-3);
+                    color: var(--color-text-engiin);
+                    & img{
+                        place-self: center;
+                        height: 14rem;
+                        width: auto;
+                    }
+                }
+                & .rating{
+                    position: absolute;
+                    top: 0;
+                    left: 50%;
+                    width: 30%;
+                    height: 5%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                    color: var(--color-text-engiin);
+                    padding: 0.6rem; 
+                    box-sizing: border-box; 
+                    text-align: center;
+                    & a{
+                        text-decoration: none;
+                        color: var(--color-text-engiin); 
+                        display: flex;
+                        align-items: center;
+                        padding-left: 0.5rem;
+                        font-size: 1vw; 
+                        & img{
+                            width: 1.5rem; 
+                            height: auto;
+                        }
+                    }
+                    
+                }
+                
+            }
+        }
+    }
+}
+@media(max-width: 37.5rem){
+    main{
+        & section{
+            & article{
+                position: relative;
+                & .movie_poster{
+                    padding-bottom: 3rem;
+                    & img{
+                        place-self: center;
+                        height: 12rem;
+                        width: auto;
+                    }
+                }
+                & .rating{
+                    width: 33%;
+                    left: 70%;
+                }
+                
+            }
+        }
+    }
+}
+@media(max-width: 37.5rem){
+    main{
+        & section{
+            & article{
+                position: relative;
+                & .movie_poster{
+                    padding-bottom: 3rem;
+                    & img{
+                        place-self: center;
+                        height: 10rem;
+                        width: auto;
+                    }
+                }
+                & .rating{
+                    left: 60%;
+                    & a{
+                        & img{
+                            width: 0.5rem; 
+                        }
+                    }
+                    
+                }
+                
+            }
+        }
+    }
+}
+@media(max-width: 25rem){
+    main{
+        & section{
+            & article{
+                position: relative;
+                & .movie_poster{
+                    padding-bottom: 3rem;
+                    & img{
+                        place-self: center;
+                        height: 8rem;
+                        width: auto;
+                    }
+                }
+                & .rating{
+                    left: 50%;
+                    & a{
+                        padding: auto;
+                        & img{
+                            width: 0.5rem; 
+                        }
+                    }
+                    
+                }
+                
+            }
+        }
+    }
 }
