--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@
     --font-size-2: 2rem;
     --font-size-1: 4rem;
     --font-size-3: 1.6rem;
+    --font-size-4: 1.2rem;
+    --font-size-5: 0.8rem;
     --size-none: 0px;
     --border-size: 0.0001rem;
     --image-size: 2rem;
