--- a/css/login.css
+++ b/css/login.css
@@ -9,9 +9,11 @@
     }
 }
 main{
-    margin: 3rem;
-    margin-right: 8rem;
-    margin-left: 8rem;
+    margin: 5rem;
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 11rem;
+    margin-bottom: 1rem;
     border: var(--border-size) solid var(--color-red);
     padding: 3rem;
     height: 25rem;
@@ -36,6 +38,7 @@ main{
             list-style: none;
             text-align: center;
             & .input{
+                width: 90%;
                 border-top: var(--border-size) solid var(--color-border-li);
                 border-bottom: var(--border-size) solid var(--color-border-li);
             }
@@ -44,7 +47,7 @@ main{
                 margin: 1rem;
                 & input{
                     padding: 0.5rem;
-                    width: 100%;
+                    width: 90%;
                     border: var(--size-none);
                     font-style: italic;
                 }
@@ -61,145 +64,20 @@ main{
         }
         & h6{
             font-size: var(--font-size-movie);
+            text-align: center;
             margin: 2rem;
-            margin-left: 4rem;
             margin-bottom: 6rem;
         }
         & p{
-            margin-left: 4em;
+            width: 98%;
+            text-align: center;
         }
     }
 }
-@keyframes slide1{
-    0%{opacity: 0;}
-    50%{opacity: 0;}
-    100%{opacity: 1;}
-}
-@keyframes slide2{
-    0%{opacity: 0;}
-    50%{opacity: 1;}
-    100%{opacity: 0;}
-}
-@keyframes slide3{
-    0%{opacity: 1;}
-    50%{opacity: 0;}
-    100%{opacity: 0;}
-}
-section::-webkit-scrollbar {
-    display: none; 
-}
-@media(max-width: 1400px){
+@media(max-width: 62.5rem){
     main{
-        margin-top: 7rem;
-        & ::placeholder{
-            font-size: var(--font-size-5);
-        }
-        & div{
-            font-size: var(--font-size-3);
-        }
-        & article{
-            & ul{
-                & li{
-                    & input{
-                        width: 90%;
-                    }
-                }
-            }
-            & h6{
-                text-align: center;
-                font-size: var(--font-size-movie);
-                margin: 2rem;
-                margin-bottom: 6rem;
-            }
-            & p{
-                text-align: center;
-                width: 80%;
-                font-size: 10px;
-                margin-left: 10%;
-            }
-        }
-    }
-}
-@media(max-width: 1000px){
-    main{
-        margin-top: 6rem;
-        & ::placeholder{
-            font-size: 0.5rem;
-        }
-        & div{
-            font-size: var(--font-size-3);
-        }
-        & article{
-            & ul{
-                & li{
-                    & input{
-                        width: 90%;
-                    }
-                }
-            }
-            & h6{
-                font-size: var(--font-size-3);
-            }
-        }
-    }
-}
-@media(max-width: 900px){
-    main{
-        margin-right: 1rem;
-        margin-left: 1rem;
-        margin-bottom: 1rem;
-        border: var(--border-size) solid var(--color-red);
-        padding: 1.5rem;
-        height: 22rem;
-        color: var(--color-white);
-        & ::placeholder{
-            font-size: 0.7rem;
-        }
-        & div{
-            margin: 2rem;
-            float: left;
-            width: 55%;
-            font-size: 1.4rem;
-        }
-        & article{
-            border: var(--border-size) solid var(--color-red);
-            margin-left: 65%;
-            height: 100%;
-            & ul{
-                & .input{
-                    height: 1.5rem;
-                }
-                & li{
-                    margin: 1rem;
-                    padding: 0.2rem;
-                    & input{
-                        padding: 0.3rem;
-                    }
-                    & button{
-                        margin-top: 1rem;
-                        height: 2rem;
-                    }
-                }
-            }
-            & h6{
-                font-size: var(--font-size-movie);
-                margin: 1rem;
-                text-align: center;
-                margin-bottom: 4rem;
-            }
-            & p{text-align: center;
-                font-size: 0.7rem;
-            }
-        }
-    }
-}
-@media(max-width: 500px){
-    main{
-        margin: 0rem;
-        margin-right: 0.5rem;
-        margin-left: 0.5rem;
         padding: 0.5rem;
-        height: 34rem;
+        height: 40rem;
         margin-bottom: 1rem;
         & div{
             margin: 1rem;
@@ -210,8 +88,9 @@ section::-webkit-scrollbar {
         & article{
             margin-left: 0%;
             margin-top: 10rem;
-            height: 70%;
+            height: 74%;
             & ul{
+                width: 98%;
                 list-style: none;
                 text-align: center;
                 & .input{
@@ -221,29 +100,22 @@ section::-webkit-scrollbar {
                 & li{
                     margin: 1rem;
                     & input{
-                        width: 100%;
+                        width: 90%;
                         border: var(--size-none);
                     }
                     & button{
-                        margin-top: 1rem;
                         height: 2rem;
-                        width: 100%;
+                        width: 90%;
+                        border: var(--border-size) solid var(--color-gray);
                     }
                 }
-            }
-            & h6{
-                margin: 1rem;text-align: center;
-                margin-bottom: 4rem;
-            }
-            & p{
-                text-align: center;
             }
         }
     }
 }
-@media(max-width: 350px){
+@media(max-width: 25rem){
     main{
-        & div{
+        & p{
             font-size: var(--font-size-5);
         }
     }
