--- a/css/nowplaying.css
+++ b/css/nowplaying.css
@@ -20,8 +20,12 @@
     background-color: black;
 }
 main{
+    margin-top: 11rem;
     padding-left: 5rem;
     padding-right: 5rem;
+    & h2{
+        margin-bottom: 2rem;
+    }
     & section{
         display: grid;
         grid-template-rows: repeat(3, 1fr);
