--- a/css/index.css
+++ b/css/index.css
@@ -4,41 +4,36 @@
     padding: 0;
     font-family: var(--font-text-engiin);
     background-color: var(--color-bg);
+    list-style: none;
 }
 main{
+    margin-top: 12rem;
     & .container_poster{
         display: grid;
         & #bigposter-container{
             place-self: center;
-            width: 76rem;
-            height: 38rem;
-            padding-right: 10rem;
+            width: 60%;
+            height: 30rem;
             position: relative;
             overflow: hidden;
             & #bigposter1{
                 position: absolute;
-                top: 10%;
-                left: 12%;
-                width: auto;
-                height: var(--percent-hundred);
+                width: 100%;
+                height: auto;
                 opacity: 0;
                 animation: slide1 10s infinite;
             }
             & #bigposter2{
                 position: absolute;
-                top: 10%;
-                left: 12%;
-                width: auto;
-                height: var(--percent-hundred);
+                width: 100%;
+                height: auto;
                 opacity: 0;
                 animation: slide2 10s infinite;
             }
             & #bigposter3{
                 position: absolute;
-                top: 10%;
-                left: 12%;
-                width: auto;
-                height: var(--percent-hundred);
+                width: 100%;
+                height: auto;
                 opacity: 0;
                 animation: slide3 10s infinite;
             }
@@ -129,7 +124,6 @@ section::-webkit-scrollbar {
 @media(max-width: 48rem){
     main{
         & .container_poster{
-            width: auto;
             padding: 1rem;
             & #bigposter-container{
                 width: 80%;
@@ -138,20 +132,39 @@ section::-webkit-scrollbar {
                 & #bigposter2,
                 & #bigposter3{
                     position: absolute;
-                    top: 0%;
-                    left: 0%;
                     height: auto;
                     width: var(--percent-hundred);
                 }
             }
             & .button{
-                place-self: center;
+                margin-left: 10%;
                 position: absolute;
-                top: 90%;
+                place-self:unset;
                 & button{
-                    padding: 0.5rem 1rem;
-                    font-size: var(--font-size-reting);
-                    
+                    background-color: var(--color-bg);
+                    color: var(--color-text-engiin);
+                    border-color: var(--color-border-line);
+                    padding: 0.7rem 1.7rem 0.7rem 1.7rem;
+                    text-align: center;
+                    font-size: var(--font-size-small);
+                    font-family: var(--font-text-engiin);
+                    & img {
+                        width: auto; 
+                        height: 0.8rem;   
+                    }
+                }
+                & #buy_button{
+                    background-color: var(--color-bg);
+                    color: var(--color-red);
+                    border-color: var(--color-border-line);
+                    padding: 0.7rem 1.7rem 0.7rem 1.7rem;
+                    text-align: center;
+                    font-size: var(--font-size-small);
+                    font-weight: bold;
+                    & img {
+                        width: auto; 
+                        height: 0.8rem;   
+                    }
                 }
             }
         }
