--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,36 +4,41 @@
     padding: 0;
     font-family: var(--font-text-engiin);
     background-color: var(--color-bg);
-    list-style: none;
 }
 main{
-    margin-top: 12rem;
     & .container_poster{
         display: grid;
         & #bigposter-container{
             place-self: center;
-            width: 60%;
-            height: 30rem;
+            width: 76rem;
+            height: 38rem;
+            padding-right: 10rem;
             position: relative;
             overflow: hidden;
             & #bigposter1{
                 position: absolute;
-                width: 100%;
-                height: auto;
+                top: 10%;
+                left: 12%;
+                width: auto;
+                height: var(--percent-hundred);
                 opacity: 0;
                 animation: slide1 10s infinite;
             }
             & #bigposter2{
                 position: absolute;
-                width: 100%;
-                height: auto;
+                top: 10%;
+                left: 12%;
+                width: auto;
+                height: var(--percent-hundred);
                 opacity: 0;
                 animation: slide2 10s infinite;
             }
             & #bigposter3{
                 position: absolute;
-                width: 100%;
-                height: auto;
+                top: 10%;
+                left: 12%;
+                width: auto;
+                height: var(--percent-hundred);
                 opacity: 0;
                 animation: slide3 10s infinite;
             }
@@ -124,6 +129,7 @@ section::-webkit-scrollbar {
 @media(max-width: 48rem){
     main{
         & .container_poster{
+            width: auto;
             padding: 1rem;
             & #bigposter-container{
                 width: 80%;
@@ -132,39 +138,20 @@ section::-webkit-scrollbar {
                 & #bigposter2,
                 & #bigposter3{
                     position: absolute;
+                    top: 0%;
+                    left: 0%;
                     height: auto;
                     width: var(--percent-hundred);
                 }
             }
             & .button{
-                margin-left: 10%;
+                place-self: center;
                 position: absolute;
-                place-self:unset;
+                top: 90%;
                 & button{
-                    background-color: var(--color-bg);
-                    color: var(--color-text-engiin);
-                    border-color: var(--color-border-line);
-                    padding: 0.7rem 1.7rem 0.7rem 1.7rem;
-                    text-align: center;
-                    font-size: var(--font-size-small);
-                    font-family: var(--font-text-engiin);
-                    & img {
-                        width: auto; 
-                        height: 0.8rem;   
-                    }
-                }
-                & #buy_button{
-                    background-color: var(--color-bg);
-                    color: var(--color-red);
-                    border-color: var(--color-border-line);
-                    padding: 0.7rem 1.7rem 0.7rem 1.7rem;
-                    text-align: center;
-                    font-size: var(--font-size-small);
-                    font-weight: bold;
-                    & img {
-                        width: auto; 
-                        height: 0.8rem;   
-                    }
+                    padding: 0.5rem 1rem;
+                    font-size: var(--font-size-reting);
+                    
                 }
             }
         }
@@ -227,41 +214,3 @@ section::-webkit-scrollbar {
         }
     }
 }
-
-
-:root {
-    --color-bg: #ffffff; /* Light mode background */
-    --color-text: #000000; /* Light mode text */
-    --color-bg-dark: #000000; /* Dark mode background */
-    --color-text-dark: #ffffff; /* Dark mode text */
-}
-
-body {
-    background-color: var(--color-bg);
-    color: var(--color-text);
-}
-
-@media (prefers-color-scheme: dark) {
-    :root {
-        --color-bg: var(--color-bg-dark);
-        --color-text: var(--color-text-dark);
-    }
-}
-
-@media (prefers-color-scheme: dark) {
-    .special-element {
-        background-color: /* some dark mode specific color */;
-        /* other dark mode specific styles */
-    }
-}
-
-#theme-switcher {
-    padding: 10px 15px;
-    background-color: #f0f0f0;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    outline: none;
-}
-
-  
